--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -53,7 +53,7 @@ const { title, description, image = FallbackImage } = Astro.props;
 </script>
 
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="icon" type="image/svg+xml" href="/favicon1.svg" />
 <link rel="sitemap" href="/sitemap-index.xml" />
 <link
 	rel="alternate"
