--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -8,6 +8,7 @@ import Tag from '../components/Tag.astro';
 import PrevNextNav from '../components/PrevNextNav.astro';
 import TableOfContents from '../components/TableOfContents.astro';
 import CopyCodeButton from '../components/CopyCodeButton.astro';
+import MermaidRenderer from '../components/MermaidRenderer.astro';
 
 type Props = CollectionEntry<'blog'>['data'] & {
     prevPost?: CollectionEntry<'blog'>;
@@ -137,4 +138,7 @@ const {title, description, pubDate, updatedDate, heroImage, tags = [], prevPost,
 
     <!-- Copy Code Button Component -->
     <CopyCodeButton/>
+
+    <!-- Mermaid Renderer Component -->
+    <MermaidRenderer/>
 </Layout>
