--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@
 import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
+import SearchModal from '../components/SearchModal.astro';
 import {SITE_TITLE, SITE_DESCRIPTION} from '../consts';
 
 interface Props {
@@ -33,5 +34,9 @@ const {title = SITE_TITLE, description = SITE_DESCRIPTION} = Astro.props;
 </main>
 
 <Footer/>
+
+<!-- 搜索模态框 -->
+<SearchModal />
+
 </body>
 </html>
