--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -40,6 +40,7 @@ import SearchButton from './SearchButton.astro';
                 <div class="hidden md:flex items-center space-x-1">
                     <HeaderLink href="/">首页</HeaderLink>
                     <HeaderLink href="/blog">博客</HeaderLink>
+                    <HeaderLink href="/tags">标签</HeaderLink>
                     <HeaderLink href="/friends">友链</HeaderLink>
                     <HeaderLink href="/about">关于</HeaderLink>
                 </div>
@@ -76,6 +77,7 @@ import SearchButton from './SearchButton.astro';
             <div class="flex flex-col space-y-2">
                 <HeaderLink href="/">首页</HeaderLink>
                 <HeaderLink href="/blog">博客</HeaderLink>
+                <HeaderLink href="/tags">标签</HeaderLink>
                 <HeaderLink href="/friends">友链</HeaderLink>
                 <HeaderLink href="/about">关于</HeaderLink>
             </div>
